--- a/CRUDExample.csproj
+++ b/CRUDExample.csproj
@@ -135,6 +135,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ProductsModel.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\NorthwindRepository.cs" />
   </ItemGroup>
